--- a/index.html
+++ b/index.html
@@ -180,15 +180,20 @@
                             <div class="row gx-5 row-cols-1 row-cols-md-2">
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
-                                    <h2 class="h5">Solutions</h2>
-                                    <p class="mb-0">UEV Solutions is a pioneer of electric vehicle charging solutions. We provide comprehensive EV infrastructure consultancy services for domestic, commercial and public sector clients. We are able to support, advise and develop EV charging strategies and installations.
-                                        On our website, you will find our selected electric vehicle products and accessories. We are adding to this list of products all the time.
-                                        </p>
+                                    <h2 class="h5">Who we are</h2>
+                                    <p class="mb-0">UEV Solutions is a pioneer of electric vehicle charging solutions. We provide comprehensive EV infrastructure consultancy services for domestic, commercial and public sector clients. We are able to support, advise and develop EV charging strategies and installations. 
                                 </div>
+
+                                <div class="col mb-5 mb-md-0 h-100">
+                                    <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                                    <h2 class="h5">Team</h2>
+                                    <p class="mb-0">Our team is composed of professionally registered engineers. Electrical, Electronics and Mechanical engineers with broad experiences./Grounding solutions plus others.</p>
+                                </div>
+
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-bullseye"></i></div>
                                     <h2 class="h5">Aims</h2>
-                                    <p class="mb-0">We aim to offer turn-key engineering consulting services to our clients and advice on all aspects of electric vehicle charging. Our dedicated team carries out all stages of the design process, from feasibility studies, surveys and design to install and commissioning.</p>
+                                    <p class="mb-0">We aim to offer turn-key engineering consulting services to our clients and advice on all aspects of electric vehicle charging.</p>
                                 </div>
 
                             </div>
@@ -206,22 +211,22 @@
                                         <div class="row gx-5 row-cols-1 row-cols-md-2">
                                             <div class="col mb-5 h-100">
                                                 <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-battery-charging"></i></div>
-                                                <h2 class="h5">Solutions</h2>
-                                                <p class="mb-0">Home, Business, Public Sector charging solutions plus others.</p>
+                                                <h2 class="h5">Planning</h2>
+                                                <p class="mb-0">Our dedicated team carries out all stages of the design process, from feasibility studies, surveys and design to install and commissioning..</p>
                                             </div>
                                             <div class="col mb-5 h-100">
                                                 <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-bullseye"></i></div>
-                                                <h2 class="h5">Services</h2>
-                                                <p class="mb-0">Design, Supply, Install (Full turn-key solution). Planning and Engineering Consulting.</p>
+                                                <h2 class="h5">Specification</h2>
+                                                <p class="mb-0">TExt on electrical stuff.</p>
                                             </div>
                                             <div class="col mb-5 mb-md-0 h-100">
                                                 <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                                <h2 class="h5">Accessories</h2>
+                                                <h2 class="h5">Designing</h2>
                                                 <p class="mb-0">Electrical equipment, EV charging cabling, Earthing/Grounding solutions plus others</p>
                                             </div>
                                             <div class="col h-100">
                                                 <div class="feature bg-success bg-gradient text-white rounded-3 mb-3"><i class="bi bi-app"></i></div>
-                                                <h2 class="h5">Electric Vehicles</h2>
+                                                <h2 class="h5">Suppying and installation</h2>
                                                 <p class="mb-0">Guidance and recomendations on choosing the right electric vehicles</p>
                                             </div>
                                         </div>
